--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -11,7 +11,7 @@
         </a>
         <p style="margin: 0px"> Регион <b>Москва</b></p>
     </div>
-    <a href="http://seller.befreela.ru/start/" class="uk-button uk-button-text"
+    <a href="becomeCreator/" class="uk-button uk-button-text"
         style="text-transform: none; font-size: 20px;">Стать
         партнером</a>
 </div>
