--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -81,7 +81,7 @@
         </ul>
         <ul class="uk-nav uk-nav-secondary uk-nav-left uk-margin-auto-vertical">
             <p style="margin: 0px"> Регион <b>Москва</b></p>
-            <a href="http://seller.befreela.ru/start/" class="uk-button uk-button-text"
+            <a href="becomeCreator/" class="uk-button uk-button-text"
                 style="text-transform: none; font-size: medium;">Стать
                 партнером</a>
         </ul>
