--- a/bizopt/BO/templates/resumes.html
+++ b/bizopt/BO/templates/resumes.html
@@ -13,55 +13,40 @@
         transition: 0.3s;
     }
 
-    /* 
-    .card-holder:hover {
-        box-shadow: 0px 0px 150px #000000;
-        -webkit-transition: all 200ms ease-in;
-        -webkit-transform: scale(1.2);
-        -ms-transition: all 200ms ease-in;
-        -ms-transform: scale(1.2);
-        -moz-transition: all 200ms ease-in;
-        -moz-transform: scale(1.2);
-        transition: all 200ms ease-in;
-        transform: scale(1.2);
-    } */
+    .uk-card-default {
+        box-shadow: none;
+    }
 </style>
 
 <body style="width: 100%; height: 100%;">
     <div style="width: 80%; margin: 0 auto;">
-        <div style="margin-bottom: 3%">
-            <h1>Бренды</h1>
-            <h3>Здесь ты можешь найти все бренды, которые продают у нас на площадке<br>В профиле бренда ты найдешь
-                информацию и товары бренда</h3>
+        <div class="uk-flex uk-flex-between uk-margin-medium-bottom">
+            <h1 style="border-top: 1px solid #0a3644e6; padding: 5% 0;">Бренды</h1>
+            <h3 class="uk-text-left uk-width-2-3 uk-text-light">Здесь ты можешь найти все бренды, которые продают у нас
+                на площадке. В
+                профиле бренда ты найдешь информацию и товары бренда</h3>
         </div>
 
         {% for item in brands %}
         <a href="/{{item.text}}">{{item.text}}</a>
         {% endfor %}
 
-        <div class="uk-flex uk-flex-wrap uk-flex-wrap-around">
-            
-            <a href="" class="uk-text-center uk-width-1-3" style="margin: 2% auto">
-                <div class="uk-box-shadow-hover-xlarge uk-inline-clip uk-transition-toggle"
-                    style="border: 6px solid black; border-radius: 50px" tabindex="0">
+        <div class="uk-flex uk-flex-wrap uk-flex-wrap-middle uk-width-1" style="justify-content: center;">
+
+            <a href="" class="uk-text-center uk-width-2-5" style="margin: 2%">
+                <div class=" uk-inline-clip uk-transition-toggle" style="border: 3px solid black;" tabindex="0">
                     <img src="https://cdn1.flamp.ru/e56d2de8c4cd3239c75e9cc11540442f.jpg" alt="">
-                    <div class="uk-transition-fade uk-position-cover uk-position-small uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle"
-                        style="background-color: rgba(10, 54, 68, 0.9);height: 100%; width: 100%; margin: 0 auto; padding: 10px;">
-                        <article class="uk-article">
-    
-                            <h2 class="uk-article-title">Heading</h2>
-    
-                            <p style="color: black">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod tempor incididunt ut labore et dolore
-                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                                aliquip ex ea
-                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                                dolore eu fugiat
-                                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                officia deserunt mollit
-                                anim id est laborum.</p>
-    
-                        </article>
+                    <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle"
+                        style="background-color: #0a3644e6;height: 100%; width: 100%; margin: 0 auto; padding: 10%;">
+
+                        <div class="uk-width-1">
+                            <h2 style="color: white;" class="uk-article-title">Heading</h2>
+
+                            <p style="color: white" class="uk-text-left uk-text-break">
+                                qweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqweweww
+                            </p>
+                        </div>
+
                     </div>
                 </div>
             </a>
@@ -70,7 +55,6 @@
 
     </div>
 
-    </div>
 
 
     <footer class="text-center text-lg-start bg-light text-muted">
